--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
     "babel-loader": "^8.1.0",
-    "core-js": "^3.6.5"
+    "babel-watch": "^7.0.0",
+    "core-js": "^3.6.5",
+    "multer": "^1.4.2"
   }
 }
