--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@babel/preset-env": "^7.10.3",
     "babel-loader": "^8.1.0",
     "babel-watch": "^7.0.0",
-    "core-js": "^3.6.5",
-    "multer": "^1.4.2"
+    "core-js": "^3.6.5"
   }
 }
