--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,9 +1,19 @@
 {
-  "presets": ["@babel/env"],
+  "presets": [["@babel/env", { "modules": false }], "@babel/react"],
   "plugins": [
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread",
-    "@babel/transform-runtime"
+    "@babel/transform-runtime",
+    [
+      "module-resolver",
+      {
+        "root": ["."],
+        "alias": {
+          "react": "preact/compat",
+          "react-dom": "preact/compat"
+        }
+      }
+    ]
   ],
   "sourceType": "unambiguous",
   "sourceMaps": "both"
