--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --host 0.0.0.0 --open",
     "_tsconf": "cross-env TS_NODE_PROJECT=\"tsconfig-cjs.json\"",
-    "devserver": "pnpm run _tsconf NODE_ENV=\"development\" webpack-dev-server"
+    "devserver": "pnpm run _tsconf NODE_ENV=\"development\" webpack-dev-server",
+    "build:prod": "pnpm run _tsconf NODE_ENV=\"production\" webpack"
   },
   "engines": {
     "node": "12.x"
@@ -47,6 +48,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.20.0",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
