--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,28 @@
 {
-    "exclude": ["dist", "public", "data"],
-    "compilerOptions": {
-      "experimentalDecorators": true,
-      // "noEmit": true,
-      "pretty": true,
-      "target": "esnext",
-      "module": "esnext",
-      "lib": ["DOM", "ESNext", "ESNext.AsyncIterable", "ES2015"],
-      "skipLibCheck": true,
-      "jsx": "react",
-      // "jsxFactory": "Preact.h",
-      "strict": true,
-      "sourceMap": true,
-      "noImplicitAny": false,
-      "moduleResolution": "node",
-      "esModuleInterop": false,
-      "downlevelIteration": true,
-      "forceConsistentCasingInFileNames": true,
-      "allowSyntheticDefaultImports": true
-    }
+  "exclude": [
+    "public",
+    "data"
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    // "noEmit": true,
+    "incremental": true,
+    "target": "es6",
+    "outDir": "dist",
+    "module": "commonjs",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
+    "skipLibCheck": true,
+    "jsx": "react",
+    "strict": true,
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true
   }
+}
