--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/script-ext-html-webpack-plugin": "^2.1.1",
+    "@types/socket.io": "^2.1.11",
+    "@types/socket.io-client": "^1.4.34",
     "@types/terser-webpack-plugin": "^5.0.2",
+    "@types/webpack-dev-middleware": "^3.7.2",
     "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
@@ -42,10 +45,11 @@
     "preact": "10.5.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0",
     "remove-files-webpack-plugin": "^1.4.4",
     "sass-loader": "^10.0.5",
     "script-ext-html-webpack-plugin": "^2.1.5",
+    "socket.io": "^3.0.3",
+    "socket.io-client": "^3.0.3",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
@@ -54,6 +58,7 @@
     "typescript": "4.0.5",
     "webpack": "5.4.0",
     "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
